# bot_3

./: CMakeLists.txt  Directory Structure.graphql  README.md
include/: data_preprocessing.h  market_data.h  model_inference.h  trading_logic.h
src/: data_preprocessing.cpp  main.cpp  market_data.cpp  model_inference.cpp  trading_logic.cpp
